server/deployments/rc-user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rc-user-service-service
  namespace: runtime-chick
spec:
  type: NodePort
  selector:
    app: rc
    service: user-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
