server/deployments/lb-ingress.yaml

apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: rc-ingress
  namespace: runtime-chick
spec:
  rules:
  - http:
      paths:
      - path: /user-service/*
        backend:
          serviceName: rc-user-service-service
          servicePort: 3003
